Updated pages with hovering animation using anime.js as css transitions and js are buggy on safari.

--- a/src/css/pages/case-study-fb-watch.scss
+++ b/src/css/pages/case-study-fb-watch.scss
@@ -55,14 +55,6 @@ $OGS-color-pink: #f8c9cf;
   }
 }
 
-.animate_image {
-  -webkit-animation-direction: alternate;
-  -webkit-animation-duration: 1s;
-  -webkit-animation-iteration-count: infinite;
-  -webkit-animation-name: hover;
-  -webkit-animation-timing-function: ease-in-out;
-}
-
 .hero {
   position: relative;
   z-index: 2;
