--- a/src/css/pages/case-study-tease.scss
+++ b/src/css/pages/case-study-tease.scss
@@ -55,28 +55,6 @@ $tease-color-cyan: #2dccd3;
   }
 }
 
-@-webkit-keyframes animate_image {
-  0% {-webkit-animate-timing-function: ease-in;}
-  25% {-webkit-animate-timing-function: ease-out;}
-  50% {-webkit-animate-timing-function: ease-in;}
-  75% {-webkit-animate-timing-function: ease-out;}
-  100% {}
-}
-
-.animate_image {
-  animation-delay: 0s;
-  animation-direction: alternate;
-  animation-duration: 1s;
-  animation-iteration-count: infinite;
-  animation-name: hover;
-
-  -webkit-animation-delay: 0s;
-  -webkit-animation-direction: alternate;
-  -webkit-animation-duration: 1s;
-  -webkit-animation-iteration-count: infinite;
-  -webkit-animation-name: hover;
-}
-
 .white_text {
   color: $tuf-color-white;
   font-size: 2.25rem;
@@ -593,6 +571,7 @@ $tease-color-cyan: #2dccd3;
   &__col__right__bottom {
     align-self: flex-end;
     justify-content: center;
+    padding-top: 0;
 
     @media screen and (min-width: rem(1920)) {
       padding: 0 rem(100) 0 0 !important;
@@ -648,7 +627,8 @@ $tease-color-cyan: #2dccd3;
     }
 
     @media screen and (min-width: rem(768)) and (max-width: rem(999)) {
-      margin-left: 50%;
+      margin-left: 30%;
+      margin-top: -40%;
     }
 
     @media screen and (min-width: rem(1000)) {
@@ -668,10 +648,6 @@ $tease-color-cyan: #2dccd3;
   }
 
   &__image__bottom__left3 {
-    @media screen and (max-width: rem(767)) {
-      margin-top: -40%;
-    }
-
     @media screen and (min-width: rem(768)) and (max-width: rem(999)) {
       margin-top: -30%;
     }
@@ -692,16 +668,20 @@ $tease-color-cyan: #2dccd3;
   &__image__bottom__middle {
     width: 50%;
 
+    @media screen and (max-width: rem(999)) {
+      padding-bottom: rem(30);
+    }
+
     @media screen and (min-width: rem(1000)) and (max-width: rem(1365)) {
       position: absolute;
-      right: -15%;
+      left: -5%;
       top: 5%;
       width: 25%;
     }
 
     @media screen and (min-width: rem(1366)) {
       position: absolute;
-      right: -10%;
+      left: -10%;
       top: 5%;
       width: 25%;
     }
